--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port= 8080
 server.shutdown= graceful
 api.Seoul.baseUrl= http://openAPI.seoul.go.kr:8088/
+api.Busan.baseUrl= http://apis.data.go.kr/6260000/
